change in place holder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2><i class="fas fa-camera" style="color: orange;"></i> Unsplash Images Demo
                     </h2>
                     <div id="search_box">
-                        <input id="input" type="text" placeholder="Search..."><i id="search" class="fas fa-search"></i>
+                        <input id="input" type="text" placeholder="find..."><i id="search" class="fas fa-search"></i>
                     </div>
                 </div>
             </div>
